something funky was going on in the team section on small screens. Fixed. Fully responsive

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -289,8 +289,8 @@ h1 {
   border-radius: 50%;
   width: 200px;
   height: 200px;
-  border: solid black 1px;
-  margin-left: 40px;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.46);
+  /*margin-left: 20px;*/
 }
 
 .team-section {
@@ -301,7 +301,7 @@ h1 {
 
 .team {
   padding: 20px;
-  margin-left: 40px;
+  /*margin-left: 20px;*/
 }
 
 .team img {
@@ -310,6 +310,9 @@ h1 {
 }
 
 @media only screen and (max-width: 850px) {
+  .team {
+    margin-left: 0;
+  }
   .team img {
       float: none;
       margin: 0 auto;
